// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Table rendering renders expected elements 1`] = `
<table
  className="Table Table--line"
/>
`;

exports[`Table rendering renders expected elements when className is set 1`] = `
<table
  className="Table Table--line TestClass"
/>
`;

exports[`Table rendering renders expected elements when fixedColumns is set 1`] = `
<table
  className="Table Table--line Table--fixed Table--fixedColumns"
/>
`;

exports[`Table rendering renders expected elements when fixedLayout is set 1`] = `
<table
  className="Table Table--line Table--fixed"
/>
`;

exports[`Table rendering renders expected elements when stickyHeader is set 1`] = `
<table
  className="Table Table--line Table--sticky"
/>
`;
